corrigido erro na etilizacao do projeto

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <div class="sobre__text">
                     <h3 class="middle__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor et dolore magna aliqua.</h3>
+                        tempor incididunt ut labore et dolore magna aliqua.</h3>
                     <button class="botao__branco">Mais</button>
                 </div>
             </div>
@@ -282,7 +282,7 @@
 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                ex ea commodo consequat.<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et
                 dolore magna aliqua. </p>
         </form>
