correção na estilização do projeto

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 
         <div class="banner">
 
-            <div class="banner__text">
+            <div class="banner__container">
                 <h1 class="banner__title">Projetos de alta complexidade</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <p class="banner__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore
                     et dolore magna aliqua.</p>
                 <button class="botao__roxo">Fazer o cálculo</button>
             </div>
@@ -54,15 +55,21 @@
 
         <section class="sobre">
 
-            <h2 class="title">Sobre nós</h2>
-            <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.<br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.<br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. </p>
+            <span>
+                <h2 class="title">Sobre nós</h2>
+                <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat.<br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat.<br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. </p>
+            </span>
 
             <div class="sobre__banner">
                 <img src="assets/banner/sobre-nos.png" alt="analisando o projeto">
@@ -80,7 +87,7 @@
                 <div class="sobre__container">
                     <h3 class="middle__subtitle">Consultoria de arquitetura e decoração</h3>
                     <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor et dolore magna aliqua.</p>
+                        tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
 
@@ -89,7 +96,7 @@
                 <div class="sobre__container">
                     <h3 class="middle__subtitle">Serviço Arquiteto</h3>
                     <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.</p>
+                        tempor incididunt ut labore et dolore magna aliqua..</p>
                 </div>
             </div>
         </section>
@@ -101,18 +108,22 @@
                 <img src="assets/banner/modo-mob.png" alt="anotando sobre o projeto">
                 <img src="assets/banner/modo-tablet.png" alt="anotando sobre o projeto">
             </div>
-
-            <h3 class="middle__subtitle">Realizamos uma consulta</h3>
-            <p class="middle__text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.<br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.<br>
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.<br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <div class="modo__container">
+                <h3 class="modo__subtitle">Realizamos uma consulta</h3>
+                <p class="modo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation
+                    ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat.<br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua.<br>
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.<br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua.</p>
+            </div>
             <span>
                 <button class="botao__roxo midbutton">Mais</button>
                 <button class="botao__branco midbutton">Contrate-nos</button>
@@ -124,53 +135,51 @@
             <h2 class="title">Vantagens</h2>
             <div class="vantagens__containers">
 
-                <div class="vantagem__container globo">
+                <div class="vantagem globo">
                     <img src="assets/icons/globo.svg" alt="globo caindo">
-                    <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi
-                        ut aliquip ex ea commodo consequat. </p>
+                    <p class="vantagem__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
 
-                <div class="vantagem__container caderneta">
+                <div class="vantagem caderneta">
                     <img src="assets/icons/caderneta.svg" alt="caderneta">
-                    <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="vantagem__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
 
-                <div class="vantagem__container diatodo">
+                <div class="vantagem diatodo">
                     <img src="assets/icons/24.svg" alt="vinte e quatro horas">
-                    <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    <p class="vantagem__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor
                     </p>
                 </div>
 
-                <div class="vantagem__container mapa">
+                <div class="vantagem mapa">
                     <img src="assets/icons/mapa.svg" alt="mapa">
-                    <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="vantagem__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
 
-                <div class="vantagem__container aviao">
+                <div class="vantagem aviao">
                     <img src="assets/icons/aviao.svg" alt="aviao">
-                    <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
+                    <p class="vantagem__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
                 </div>
 
-                <div class="vantagem__container calendario">
+                <div class="vantagem calendario">
                     <img src="assets/icons/calendario.svg" alt="calendario">
-                    <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi.
+                    <p class="vantagem__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi
                     </p>
                 </div>
 
-                <div class="vantagem__container terra">
+                <div class="vantagem terra">
                     <img src="assets/icons/globo-terrestre.svg" alt="globo terrestre">
-                    <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi
-                        ut aliquip ex ea commodo consequat.
+                    <p class="vantagem__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
                 </div>
             </div>
@@ -282,7 +291,8 @@
 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                ex ea commodo consequat.<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor
                 incididunt ut labore et
                 dolore magna aliqua. </p>
         </form>
