ajuste no layout de tablet

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
 
             <nav class="menu">
-                <img onclick="clickMenu()" src="assets/header/Menu mobile.svg" alt="hamburguer svg">
+                <img class="menu__burguer" onclick="clickMenu()" src="assets/header/Menu mobile.svg" alt="">
                 <ul id="menu__opcoes">
                     <img class="voltar" onclick="closeMenu()" src="assets/header/X.svg" alt="cancelar">
                     <li><button>Sobre nós</button></li>
@@ -27,13 +27,16 @@
                 </ul>
             </nav>
             <img class="logo" src="assets/header/logo.svg" alt="logotipo">
-            <img class="lupa" onclick="clickSearch()" src="assets/header/lupa.svg" alt="lupa">
+            <img class="lupa" onclick="clickSearch()" src="assets/header/lupa.svg" alt="">
+
+            </svg>
+
 
             <div id="menu__search">
                 <div class="search__opcoes">
                     <input class="search__bar" type="search" placeholder="O que está procurando?">
                     <img class="search__lupa__roxa" src="assets/header/lupa-roxa.svg" alt="lupa roxa">
-                    <img class="search__close" onclick="closeSearch()" src="assets/header/fechar.svg" alt="fechar">
+                    <img class="closed__search" onclick="closeSearch()" src="assets/header/fechar.svg" alt="fechar">
                 </div>
             </div>
         </header>
@@ -197,7 +200,15 @@
                         <h3 class="servico__subtitle">Lorem ipsum</h3>
                         <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </span>
-                    <button class="servico__button"><img src="assets/icons/Flecha 32px.svg" alt="flecha"></button>
+                    <button class="servico__button">
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_6_202)">
+                                <path
+                                    d="M16.7814 16L13.4814 12.7L14.4241 11.7573L18.6668 16L14.4241 20.2427L13.4814 19.3L16.7814 16Z"
+                                    fill="#845EF7" />
+                            </g>
+                        </svg>
+                    </button>
                 </div>
 
             </div>
@@ -211,7 +222,15 @@
                         <h3 class="servico__subtitle">Lorem ipsum</h3>
                         <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </span>
-                    <button class="servico__button"><img src="assets/icons/Flecha 32px.svg" alt="flecha"></button>
+                    <button class="servico__button"> <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_6_202)">
+                                <path
+                                    d="M16.7814 16L13.4814 12.7L14.4241 11.7573L18.6668 16L14.4241 20.2427L13.4814 19.3L16.7814 16Z"
+                                    fill="#845EF7" />
+                            </g>
+                        </svg>
+                    </button>
                 </div>
             </div>
 
@@ -222,7 +241,15 @@
                         <h3 class="servico__subtitle">Lorem ipsum</h3>
                         <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </span>
-                    <button class="servico__button"><img src="assets/icons/Flecha 32px.svg" alt="flecha"></button>
+                    <button class="servico__button">
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_6_202)">
+                                <path
+                                    d="M16.7814 16L13.4814 12.7L14.4241 11.7573L18.6668 16L14.4241 20.2427L13.4814 19.3L16.7814 16Z"
+                                    fill="#845EF7" />
+                            </g>
+                        </svg>
+                    </button>
                 </div>
             </div>
 
@@ -234,7 +261,15 @@
                         <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
                     </span>
-                    <button class="servico__button"><img src="assets/icons/Flecha 32px.svg" alt="flecha"></button>
+                    <button class="servico__button">
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_6_202)">
+                                <path
+                                    d="M16.7814 16L13.4814 12.7L14.4241 11.7573L18.6668 16L14.4241 20.2427L13.4814 19.3L16.7814 16Z"
+                                    fill="#845EF7" />
+                            </g>
+                        </svg>
+                    </button>
                 </div>
             </div>
 
@@ -246,7 +281,15 @@
                         <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
                     </span>
-                    <button class="servico__button"><img src="assets/icons/Flecha 32px.svg" alt="flecha"></button>
+                    <button class="servico__button"> <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_6_202)">
+                                <path
+                                    d="M16.7814 16L13.4814 12.7L14.4241 11.7573L18.6668 16L14.4241 20.2427L13.4814 19.3L16.7814 16Z"
+                                    fill="#845EF7" />
+                            </g>
+                        </svg>
+                    </button>   
                 </div>
             </div>
 
@@ -258,7 +301,15 @@
                         <p class="middle__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
                     </span>
-                    <button class="servico__button"><img src="assets/icons/Flecha 32px.svg" alt="flecha"></button>
+                    <button class="servico__button"> <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_6_202)">
+                                <path
+                                    d="M16.7814 16L13.4814 12.7L14.4241 11.7573L18.6668 16L14.4241 20.2427L13.4814 19.3L16.7814 16Z"
+                                    fill="#845EF7" />
+                            </g>
+                        </svg>
+                    </button>
                 </div>
             </div>
         </section>
@@ -332,6 +383,7 @@
         function closeSearch() {
             menu__search.style.display = "none"
         }
+
     </script>
 </body>
 
