--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div>
             </div>
 
-            <div class="servico">
+            <div class="servico empilhador">
                 <img class="servico__imagem" src="assets/servicos/empilhador.png" alt="empilhando">
                 <div class="servico__container">
                     <span class="servico__text">
@@ -289,7 +289,7 @@
                                     fill="#845EF7" />
                             </g>
                         </svg>
-                    </button>   
+                    </button>
                 </div>
             </div>
 
