--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <header>
             <nav class="menu">
                 <button class="menu__burguer">
-                    <img onclick="clickMenu()" src="assets/header/Menu-mobile.svg" alt="burguer">
+                    <img onclick="clickMenu()" src="assets/header/menu-mobile.svg" alt="burguer">
                 </button>
                 <ul id="menu__opcoes">
-                    <img class="voltar" onclick="closeMenu()" src="assets/header/X.svg" alt="cancelar">
+                    <img class="voltar" onclick="closeMenu()" src="assets/header/x.svg" alt="cancelar">
                     <li>
                         <button>Sobre nós</button>
                     </li>
@@ -181,7 +181,7 @@
                     <p class="vantagens__vantagem__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="vantagens__vantagem diatodo">
-                    <img src="assets/icons/24.svg" alt="vinte e quatro horas">
+                    <img src="assets/icons/loop.svg" alt="vinte e quatro horas">
                     <p class="vantagens__vantagem__text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     </p>
@@ -488,3 +488,5 @@
 </body>
 
 </html>
+
+
