--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav class="menu">
                 <button class="menu__burguer">
-                    <img onclick="clickMenu()" src="assets/header/menu-mobile.svg" alt="burguer">
+                    <img onclick="clickMenu()" src="assets/header/burguer.svg" alt="burguer">
                 </button>
                 <ul id="menu__opcoes">
                     <img class="voltar" onclick="closeMenu()" src="assets/header/x.svg" alt="cancelar">
